--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="sort_order">Sort order</string>
     <string name="creation_time">Creation time</string>
     <string name="name">Name</string>
+    <string name="smth_wrong">Что-то пошло не так</string>
 </resources>
